[project]
name = "prompt-studio"
version = "1.0.0"
description = "AI-powered prompt engineering assistant: scoring, validation, optimization, and semantic search."
authors = [
    {name = "Utkarsh Upadhyay", email = "utk2103@github.com"},
]
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    # API
    "fastapi[all]>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    # Database + ORM
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    # Vector DB
    "pgvector>=0.3.5",
]

[tool.pdm.scripts]
start   = "uvicorn main:app --host 0.0.0.0 --port 8000 --workers 4"
dev     = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
migrate = "alembic upgrade head"
rollback = "alembic downgrade -1"
make_migration = "alembic revision --autogenerate -m"
test    = "pytest"
lint    = "ruff check ."
fmt     = "ruff format ."

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.0",
]
lint = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
line-length = 120
exclude = [".git", ".venv", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
